tests/dataset/tpc-ds/compiler/c/q34.error
/tmp/TestCCompiler_TPCDS_Goldenq341313838877/001/prog.c: In function ‘test_TPCDS_Q34_simplified’:
/tmp/TestCCompiler_TPCDS_Goldenq341313838877/001/prog.c:281:51: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  281 |   if (test_TPCDS_Q34_simplified_result.len != tmp1.len) {
      |                                                   ^
      |                                                   ->
/tmp/TestCCompiler_TPCDS_Goldenq341313838877/001/prog.c:285:60: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  285 |       if (test_TPCDS_Q34_simplified_result.data[i3] != tmp1.data[i3]) {
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_TPCDS_Goldenq341313838877/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq341313838877/001/prog.c:457:29: warning: implicit declaration of function ‘result_item_list_t_create’ [-Wimplicit-function-declaration]
  457 |   result_item_list_t tmp4 = result_item_list_t_create(dn.len * customer.len);
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq341313838877/001/prog.c:457:72: error: ‘(customer_t *)&customer’ is a pointer; did you mean to use ‘->’?
  457 |   result_item_list_t tmp4 = result_item_list_t_create(dn.len * customer.len);
      |                                                                        ^
      |                                                                        ->
/tmp/TestCCompiler_TPCDS_Goldenq341313838877/001/prog.c:489:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  489 |     _json_string(it.c_last_name);
      |                  ~~^~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq341313838877/001/prog.c:64:32: note: expected ‘char *’ but argument is of type ‘const char *’
   64 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq341313838877/001/prog.c:493:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  493 |     _json_string(it.c_first_name);
      |                  ~~^~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq341313838877/001/prog.c:64:32: note: expected ‘char *’ but argument is of type ‘const char *’
   64 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq341313838877/001/prog.c:497:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  497 |     _json_string(it.c_salutation);
      |                  ~~^~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq341313838877/001/prog.c:64:32: note: expected ‘char *’ but argument is of type ‘const char *’
   64 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq341313838877/001/prog.c:501:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  501 |     _json_string(it.c_preferred_cust_flag);
      |                  ~~^~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq341313838877/001/prog.c:64:32: note: expected ‘char *’ but argument is of type ‘const char *’
   64 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq341313838877/001/prog.c:513:38: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  513 |   test_TPCDS_Q34_simplified_result = result;
      |                                      ^~~~~~
